prevent additional bottom border on wrap

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,7 +1,7 @@
 @use '../../../scss/colors' as *;
 
 #activity {
-    h4,
+    p + h4,
     .toggle-container {
         border-bottom: 1px solid lightgrey;
         line-height: 1.2; // This is already set on h4 but is also needed for the label.
